# autoppa

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  streamlit_app.py
autoppa/: agent.py  benchmark.py  main.py  power.py  sim.py  synth.py  utils.py
baseline/human/: task1.v
baseline/optimized/: task1.v  task2.v  task3.v  task4.v  task5.v
baseline/reference/: task1.v  task2.v  task3.v  task4.v  task5.v
benchmark/: metadata.json  power.tcl  task1.v  task2.v  task3.v  task4.v  task5.v
benchmark/orig/: task1.v
benchmark/tb/: task1.v
